<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="textview">TextView</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating :</string>
    <string name="_10">/10</string>
    <string name="todo">TODO</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="movie_catalog">Movie Catalog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storyline">Storyline</string>
</resources>